--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   gitRepo = ""
 
   # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = "Musings"        # default: the title value    # 默认值: 上面设置的title值
+  logoTitle = "Matt's Musings"        # default: the title value    # 默认值: 上面设置的title值
   keywords = ["blog", "geospatial", "software", "transport"]
   description = "Hugo theme even example site."
 
